relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@ip|127.0.0.1": {
    "type": "string",
    "value": "[ip]"
  },
  "_meta": {
    "@ip|127.0.0.1": {
      "value": {
        "": {
          "rem": [
            [
              "@ip",
              "s",
              0,
              4
            ]
          ],
          "len": 9
        }
      }
    }
  }
}
